/*
 * Copyright Â© 2024 Kaleido, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
 * the License. You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
 * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package github.com.kaleido_io.paladin.kata.plugin;
option go_package = "pkg/proto/plugin";

message CreateInstance {
    string name = 1;
    string messageDestination = 2;
}

// published whenever a plugin becomes ready
message PluginProviderReadyEvent {
  string providerName = 1;
}

// published whenever a new instance of a plugin becomes ready
message PluginInstanceReadyEvent {
  string providerName = 1;
  string instanceName = 2;
}